GET /position/:id/candidates
